# archwizard

./: .gitignore  CMakeLists.txt  lsan_suppress.txt
lib/glad/src/: glad.c
libs/glad/include/glad/: glad.h
shaders/basic/: fragment.glsl  vertex.glsl
src/: file_reader.cpp  file_reader.h  main.cpp  shader.cpp  shader.h  shader_watcher.cpp  shader_watcher.h
